sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value na
      na=0
      ^AlgCombSort:15: error: value += is not a member of Int
        i+=1
         ^