sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs
  var ok:Boolean=false
  do {
    if (ecart>1) {
      ecart = (ecart.toDouble / 1.3).toInt
    }
    ok=false
    for (i <- 0 to getNombreValeurs-ecart-1) {
      na=0
      if (plusPetit(i+ecart,i)) {
        echange(i,i+ecart)
        ok=true
        i+=1
      }
    }
  } while (ecart>1 | ok)
}